# phinet-android

./: .gitignore  README.md  build-android.sh  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  argon2.c  argon2.h  chacha20_poly1305.h  curve25519.c  curve25519.h  lockr-jni.c  spake2.c  spake2.h
app/src/main/java/com/phinet/app/: MainActivity.kt  PhinetApp.kt
app/src/main/java/com/phinet/app/data/: ComApi.kt  ComRepository.kt  Models.kt  Network.kt  Settings.kt
app/src/main/java/com/phinet/app/feature/browser/: BrowserScreen.kt
app/src/main/java/com/phinet/app/feature/com/: ChatScreen.kt  ComScreen.kt  ComViewModel.kt  GroupChatScreen.kt  GroupsScreen.kt  GroupsViewModel.kt
app/src/main/java/com/phinet/app/feature/settings/: SettingsScreen.kt
app/src/main/java/com/phinet/app/node/: CtlClient.kt  NativeDaemon.kt  NodeConfig.kt  PhinetService.kt
app/src/main/java/com/phinet/app/ui/: AppLock.kt  PhinetRoot.kt
app/src/main/java/com/phinet/app/vault/: FailedAttemptTracker.kt  FileTransfer.kt  KeystoreUtils.kt  NativeLib.kt  PanicManager.kt  PhinetVaultBridge.kt  VaultCrypto.kt  VaultIntegrityChecker.kt  VaultQuickSave.kt  VaultSession.kt  VaultStore.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_phi.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
gradle/: libs.versions.toml
(+11 files in other folders)
